Fix menu on mobile

--- a/style.css
+++ b/style.css
@@ -74,24 +74,17 @@ footer {
   font-size: 85%;
 }
 
-.menu-icon {display: none;}
+.menu-mobile {display: none;}
 
 @media screen and (max-width: 600px) {
 
   p, dl {margin-left: 2ch;}
 
-  .menu-icon {display: block;}
+  .menu {display: none;}
+  .menu-mobile {display: block;}
 
-  .menu:active #menu {height: 23em;}
-
-  #menu {
-    height: 0em;
-    overflow: hidden;
-    transition-property: height;
-    transition: all 0.5s ease-in-out;
-  }
-
-  ul.topnav li.right,
   ul.topnav li {float: none;}
   ul.topnav {position: static;}
+
+  details > summary {list-style: none;}
 }
